# a800mon

./: .gitignore  AGENTS.md  CODING_STANDARDS.md  CODING_STANDARS.md  Makefile  SOCKET_PROTOCOL.md  pyproject.toml
a800mon/: actions.py  app.py  appstate.py  atascii.py  cli.py  cpustate.py  datastructures.py  debug.py  disasm.py  disassembly.py  displaylist.py  history.py  inputwidget.py  main.py  memory.py  memorymap.py  rpc.py  screenbuffer.py  shortcutbar.py  shortcuts.py  socket.py  socketclient.py  topbar.py  ui.py
assets/: logo.xcf
go800mon/a800mon/: actions.go  app.go  appstate.go  asmrender.go  breakpoints.go  caps.go  cli.go  cpustate.go  datastructures.go  disassembly.go  displaylist.go  history.go  inputwidget.go  main.go  memorymap.go  rpc.go  screenbuffer.go  shortcutbar.go  shortcutinput.go  shortcuts.go  statusupdater.go  topbar.go  trainer.go  ui.go  util.go  watchers.go
py800mon/: actions.py  app.py  appstate.py  atascii.py  breakpoints.py  cli.py  cpustate.py  datastructures.py  disasm.py  disassembly.py  displaylist.py  emulator.py  history.py  inputwidget.py  main.py  memory.py  memorymap.py  rpc.py  screenbuffer.py  shortcutbar.py  shortcuts.py  socket.py  statusupdater.py  topbar.py  trainer.py  ui.py  watchers.py
py800mon/atari/: displaylist.py  memory.py  memorymap.py
py800mon/cli/: common.py  main.py  utils.py
py800mon/monitor/: appstate.py  breakpoints.py  cpustate.py  disassembly.py  displaylist.py  history.py  main.py  screenbuffer.py  shortcutbar.py  statusupdater.py  topbar.py  watchers.py
py800mon/ui/: __init__.py  color.py  (+6 more)
(+55 files in other folders)
